<resources>
    <string name="app_name">contacts</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="id">1</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="cancel">Cancel</string>
</resources>
