<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <ImageView
        android:id="@+id/contact_avatar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/orange"
        android:contentDescription="@string/avatar"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:autofillHints="Name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/contact_avatar"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:autofillHints="Number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/contact_name"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact"
        app:layout_constraintTop_toBottomOf="@+id/contact_number"
        tools:layout_editor_absoluteX="-29dp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/edit_button"
        tools:layout_editor_absoluteX="-29dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/delete_button"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>